logger, errorhandler middlewares

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,13 @@
     <style>
         h1{
             text-align: center;
-            color: red;
+            background-color: black;
+            color: white;
             margin-top: 50vh;
         }
     </style>
 </head>
 <body>
-    <h1>404 Page Not found</h1>
+    <h1>index.html</h1>
 </body>
 </html>
